[tool.poetry]
name = "improved-tribble"
version = "0.1.0"
description = ""
authors = ["ToluClassics <ogundepoodunayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.45.1"
torch = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
